hide basket from blank page template

--- a/css/_woo_side_cart.scss
+++ b/css/_woo_side_cart.scss
@@ -52,3 +52,9 @@
         }
     }
 }
+.page-template-page-template-blank {
+    .xoo-wsc-modal {
+        display: none !important;
+        pointer-events: none;
+    }
+}
